[project]
name = "cautils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Reto Gerber", email = "reto.gerber@uzh.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "llvmlite>=0.43",
    "matplotlib>=3.9.2",
    "mypy>=1.14.1",
    "numba>=0.60.0",
    "numpy>=1.26",
    "nyxus>=0.9.0",
    "ome-types>=0.5.3",
    "opencv-python>=4.10.0.84",
    "polars>=1.14.0",
    "pydantic>=2.10.5",
    "scikit-fda>=0.9.1",
    "scikit-image>=0.24.0",
    "scipy>=1.14.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

[tool.uv]
package = true

[tool.mypy]
python_version = "3.12"
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = ["numba.*","scipy.*"]
ignore_missing_imports = true
